add html and css to order page

--- a/orders.html
+++ b/orders.html
@@ -52,19 +52,35 @@
                 <h2 class="about-head order-head">Orders</h2>
                 <div class="about">
                     <div class="order-info">
+                        <div>
                         <div class="order-links">
-                            <ul>
+                            <ul >
                                 <li><a href="#">Dashboard</a></li>
+                                <hr>
                                 <li><a href="#">Orders</a></li>
+                                <hr>
                                 <li><a href="#">Downloads</a></li>
+                                <hr>
                                 <li><a href="#">Addresses</a></li>
+                                <hr>
                                 <li><a href="#">Accout details</a></li>
+                                <hr>
                                 <li><a href="#">Logout</a></li>
                             </ul>
-                            <button>Edit</button>
+                            
                         </div>
-                        <div class="browser-products">
-
+                        <button>Edit</button>
+                    </div>
+                      <div class="browser-products">
+                  <div class="browser-body">
+               <div class="inner-browser">
+           <span><p class="browser-icon">&#128504;</p>
+            <p>No order has been made yet.</p>
+           </span> 
+        
+        <Button>Browser products</Button>
+    </div>
+</div>
                         </div>
                     </div>
                     <section>
