--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./shop.html">Shop</a></li>
                 <li><a href="./orders.html">Order</a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./login.html">Login</a></li>
+                <li><a href="/assets/">Contact</a></li>
             </ul>
             <div class="cart-area">
                 <p><i class="fa-solid fa-bag-shopping"></i> $0.00</p>
