add to top buttom

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav>
-        <div class="nav-top">
+        <div id="top" class="nav-top">
             <ul class="nav-list">
                 <li><a href="#"> Cart</a></li>
                 <li><a href="#">Checkout</a></li>
@@ -330,9 +330,16 @@
             </div>
         </div>
     </section>
+
+    <!--to top-->
+
+    <div id="toTop" class="to-top">
+        <a href="#top">&#8963;</a>
+    </div>
     <!--footer area-->
     <footer>
         <div class="foot-area">
+
             <div class="foot-info-1">
                 <h3>Your Healthy Choice Vending LLC</h3>
                 <img src="./assets/image/logo.jpg" />
@@ -358,9 +365,12 @@
             </div>
         </div>
         <hr>
+
         <div class="foot-bottom">
             <p>Copyright © All rights reserved. | Your Healthy Choice Vending LLC</p>
+
         </div>
+
     </footer>
     <script src="./js/main.js"></script>
 </body>
