change header contact class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#">Checkout</a></li>
                 <li><a href="#">Shop</a></li>
             </ul>
-            <div class="contact">
+            <div class="top-contact">
                 <p><i class="fa-solid fa-location-dot"></i> USA</p>
                 <P><i class="fa-solid fa-phone"></i>321-345-7796</P>
                 <P><i class="fa-solid fa-envelope"></i>admin@yourhealthychoicellc.com</P>
